--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -74,6 +74,12 @@ body {
 	&.delayed{
 		transition: all .5s ease-in-out 0.2s;
 	}
+	&.delayed-2{
+		transition: all .5s ease-in-out 0.4s;
+	}
+	&.delayed-3{
+		transition: all .5s ease-in-out 0.6s;
+	}
 }
 
 .reveal .slides section .fragment.grow {
