--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -16,7 +16,20 @@ html * {
  *********************************************/
 body {
   background: #002b36;
-  background-color: #002b36; }
+  background-color: #002b36;
+  transition: background-color 0.5s linear; }
+  body.iadvize {
+    background-color: #2bc655; }
+  body.drivy {
+    background-color: #3c4659; }
+  body.chauffeur {
+    background-color: #252930; }
+  body.leon {
+    background-color: #ce0a2a; }
+  body.akeneo {
+    background-color: #8f21d5; }
+  body.beezup {
+    background-color: #0098e0; }
 
 .reveal {
   font-family: "Lato", sans-serif;
