--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -247,6 +247,13 @@ body {
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  .reveal section img.no-border {
+    margin: 0 0px;
+    background: white;
+    padding: 10px;
+    border-radius: 3px;
+    border: none;
+    box-shadow: none; }
 
 .reveal section img.plain {
   border: 0;
@@ -349,6 +356,70 @@ body {
   left: calc((50vw - 480px)* -1);
   height: 100vh;
   width: 100vw; }
+
+.section-abileo {
+  display: flex;
+  flex-direction: column; }
+  .section-abileo .row1 {
+    height: 50%;
+    margin: 90px 0;
+    display: flex;
+    justify-content: space-around; }
+  .section-abileo .row2 {
+    margin: 90px 0;
+    display: flex;
+    justify-content: center; }
+  .section-abileo .logo-ss {
+    display: flex; }
+    .section-abileo .logo-ss svg {
+      height: 80px;
+      width: auto;
+      margin: 0 20px; }
+    .section-abileo .logo-ss #icon-stereo {
+      fill: white; }
+    .section-abileo .logo-ss #icon-super {
+      fill: #009be3; }
+  .section-abileo .arrow-1 {
+    top: 30%;
+    left: 44%;
+    transform-origin: left 50%;
+    width: 150px; }
+  .section-abileo .arrow-2 {
+    top: 46%;
+    left: 72%;
+    transform-origin: left 50%;
+    transform: rotate(130deg);
+    width: 150px; }
+  .section-abileo .arrow-3 {
+    top: 62%;
+    left: 38%;
+    transform-origin: left 50%;
+    transform: rotate(-130deg);
+    width: 150px; }
+  .section-abileo .arrow {
+    position: absolute;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.5); }
+    .section-abileo .arrow:before {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 10px;
+      top: 0;
+      right: 0;
+      background: rgba(255, 255, 255, 0.5);
+      transform-origin: right 50%;
+      transform: rotate(45deg); }
+    .section-abileo .arrow:after {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 10px;
+      top: 0;
+      right: 0;
+      background: rgba(255, 255, 255, 0.5);
+      transform-origin: right 50%;
+      transform: rotate(-45deg); }
 
 .logo-section {
   width: 960px;
@@ -453,3 +524,96 @@ body {
   .section-goliath svg {
     height: 100%;
     max-width: 100%; }
+
+.section-phases {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 80px 0 !important;
+  justify-content: space-between;
+  height: 540px;
+  width: 960px; }
+  .section-phases .row1 {
+    display: flex;
+    justify-content: space-between; }
+  .section-phases .row3 {
+    display: flex;
+    justify-content: flex-end; }
+  .section-phases .image-base {
+    position: absolute;
+    bottom: 80px;
+    left: 0; }
+    .section-phases .image-base .stereobase {
+      height: auto;
+      width: 340px; }
+  .section-phases .step {
+    display: flex;
+    align-items: center; }
+    .section-phases .step .names {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      color: #009be3;
+      font-size: 22px;
+      text-align: left !important;
+      margin: 0 50px 0 0; }
+      .section-phases .step .names span {
+        margin: 2px 0; }
+      .section-phases .step .names:after {
+        content: "";
+        position: absolute;
+        top: -5px;
+        height: calc(100% + 10px);
+        right: -25px;
+        width: 1px;
+        background-color: rgba(255, 255, 255, 0.5); }
+    .section-phases .step .desc {
+      text-align: left;
+      font-family: "elena", Helvetica, sans-serif !important;
+      font-size: 18px; }
+  .section-phases .arrow-1 {
+    top: 16%;
+    left: 39%;
+    width: 200px;
+    transform-origin: left 50%; }
+  .section-phases .arrow-2 {
+    top: 26%;
+    left: 88%;
+    width: 60px;
+    transform-origin: left 50%;
+    transform: rotate(90deg); }
+  .section-phases .arrow-3 {
+    top: 48%;
+    left: 63%;
+    width: 150px;
+    transform-origin: left 50%;
+    transform: rotate(180deg); }
+  .section-phases .arrow-4 {
+    top: 82%;
+    left: 48%;
+    width: 150px;
+    transform-origin: left 50%; }
+  .section-phases .arrow {
+    position: absolute;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.5); }
+    .section-phases .arrow:before {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 10px;
+      top: 0;
+      right: 0;
+      background: rgba(255, 255, 255, 0.5);
+      transform-origin: right 50%;
+      transform: rotate(45deg); }
+    .section-phases .arrow:after {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 10px;
+      top: 0;
+      right: 0;
+      background: rgba(255, 255, 255, 0.5);
+      transform-origin: right 50%;
+      transform: rotate(-45deg); }
