--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -291,6 +291,14 @@ body {
 	border: 4px solid $mainColor;
 
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+	&.no-border{
+		margin: 0 0px;
+		background: white;
+		padding: 10px;
+		border-radius: 3px;
+		border: none;
+		box-shadow: none;
+	}
 }
 
 	.reveal section img.plain {
