--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -246,6 +246,13 @@ body {
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #222;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  .reveal section img.no-border {
+    margin: 0 0px;
+    background: white;
+    padding: 10px;
+    border-radius: 3px;
+    border: none;
+    box-shadow: none; }
 
 .reveal section img.plain {
   border: 0;
